ui package: compiler warning fixes combined with collection improvements.